fixed spacing between prompt and brain image on refraim session page

--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,16 @@ body {
 
 .refraim-prompt {
   padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 7px;
   text-align: left;
 }
 
 .convo-text {
   text-align: left;
-  
 }
+
 .convo-text1 {
   text-align: left;
   padding-top: 10px;
@@ -50,7 +53,7 @@ text-align: right;
 .brain-icon {
   height: 40px;
   width: 40px;
-  float: right;
+  /* float: right; */
 }
 
 .brain-icon-left {
